<resources>
    <string name="app_name">NoteBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_delete_all">Clear noteBook</string>
    <string name="action_add">Add</string>
    <string name="do_nothing">Do nothing</string>
    <string name="title_activity_list_full_view_item">ListFullViewItemActivity</string>

    <string name="action_delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_note">Add note</string>
    <string name="clear_notebook">Clear notebook</string>
    <string name="about_developer">About developer</string>
    <string name="contacts">Contacts</string>
    <string name="hi_i_m_bob">Hi! I`m Bob!</string>
    <string name="my_email_google_gmail_com">My email: google@gmail.com</string>
    <string name="notebook_is_empty">NoteBook is Empty</string>
    <string name="checkbutton">CheckButton</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="title">TITLE</string>
    <string name="close_note">Close Note</string>
    <string name="d">D</string>
    <string name="note_title">Enter note title</string>
    <string name="note_text">Enter note text</string>
    <string name="your_location_not_defined">Your location not defined</string>
    <string name="appwidget_text">EMPTY NOTEBOOK</string>
    <string name="add_widget">Add widget</string>
</resources>
