<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_16dp"
    android:layout_marginRight="@dimen/dimen_16dp"
    android:layout_marginTop="@dimen/dimen_8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/card_view_first_letter_text"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:hint="@string/d"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_view_title_text"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/title"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/card_view_close_note_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_note"
            android:src="@drawable/ic_close_black_24dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>